--- a/djangodemo/jsConfirm/static_source/scss/framework/_grid.scss
+++ b/djangodemo/jsConfirm/static_source/scss/framework/_grid.scss
@@ -21,6 +21,10 @@
     }
 }
 
+a:after {
+    display: initial !important;
+}
+
 @for $i from 1 through $grid-columns {
     .small-#{$i} {
         width: ($i / $grid-columns) * 100%;
