--- a/djangodemo/jsConfirm/static_source/scss/web/_header.scss
+++ b/djangodemo/jsConfirm/static_source/scss/web/_header.scss
@@ -41,4 +41,9 @@ header {
         @include import-image('logo.svg', 8rem, 2.1rem, 100%);
         margin-top: 0.5rem;
     }
+
+    .right {
+        font-size: 1.2rem;
+        padding: 0.7rem;
+    }
 }
